fix: weird layout spacing in home and content refinement in  blog ray tracer

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,7 +70,7 @@
   --space-s: 1rem;
   --space-m: 1.75rem;
   --space-l: 3rem;
-  --space-xl: 6rem;
+  --space-xl: 2rem;
 }
 
 /* ============================================
